--- a/notebooks/data_visualizator.ipynb
+++ b/notebooks/data_visualizator.ipynb
@@ -47,7 +47,7 @@
     "    for i in files:\n",
     "        print(i)\n",
     "        \n",
-    "    #fet the file path\n",
+    "    #get the file path\n",
     "    file_path = input(\"File path\")\n",
     "    \n",
     "    df = pd.read_csv(file_path, index_col=\"date\")\n",
