--- a/notebooks/dataframe_styler.ipynb
+++ b/notebooks/dataframe_styler.ipynb
@@ -63,6 +63,8 @@
     "    init_date = input(\"Begin date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'\")\n",
     "    final_date = input(\"Final date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'\")\n",
     "    \n",
+    "    \n",
+    "    #make global to acess outside function\n",
     "    global full_df\n",
     "    global funding_df\n",
     "    \n",
@@ -71,9 +73,8 @@
     "    df2 = df[init_date:final_date]\n",
     "    df3 = df2[df2[\"fundingRate\"] != 0]\n",
     "    \n",
-    "    \n",
+    "    #get styles\n",
     "    full_df = df2.style.bar(subset=['close_diff'], align='mid', color=['#d65f5f', '#5fba7d'])\n",
-    "    \n",
     "    funding_df = df3.style.bar(subset=['close_diff'], align='mid', color=['#d65f5f', '#5fba7d'])\n",
     "    \n",
     "\n",
