--- a/notebooks/dataframe_styler.ipynb
+++ b/notebooks/dataframe_styler.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,10 +72,11 @@
     "    liquidation_price = float(input(\"Select the liquidation price decrease (as a decimal format, ex: 0.01)\"))\n",
     "    print()\n",
     "    minutes = input(\"Select the minutes interval (integer with two digits, ex : 16)\")\n",
-    "    \n",
+    "    print()\n",
+    "    filename = input(\"Name for the dataframe to save\")\n",
     "    \n",
     "    df_time_period = df[init_date:final_date]\n",
-    "    df_exact_hour = df_time_period.at_time(hour)\n",
+    "    df_exact_hour = df_time_period.at_time(hour+\":00\")\n",
     "    \n",
     "    \n",
     "    #Initialize the counter and the percentage\n",
@@ -94,8 +95,8 @@
     "        \n",
     "        # update the target and liquidation prices with the default price\n",
     "        \n",
-    "        target_price= df_sliced['close'][0] * (1 +target_price)\n",
-    "        liquidation_price= df_sliced['close'][0] * (1 -liquidation_price)\n",
+    "        target_price= default_price * (1 +target_price)\n",
+    "        liquidation_price= default_price * (1 -liquidation_price)\n",
     "        \n",
     "        #iterates through the sliced dataframe and counts only if the liquidation price is higher\n",
     "        # than the minimum of the day and the target price is below the high\n",
@@ -106,6 +107,8 @@
     "                counter +=1\n",
     "        percentage = counter/len(df_sliced)\n",
     "        \n",
+    "        #save the dataframe\n",
+    "        df_sliced.to_csv(\"{}.csv\".format(filename))\n",
     "\n",
     "    # If the funding is not higher stops\n",
     "    else:\n",
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 215,
    "metadata": {
     "scrolled": true
    },
@@ -143,21 +146,27 @@
       "..\\data\\cleaned\\LTCUSDT.csv\n",
       "..\\data\\cleaned\\SXPUSDT.csv\n",
       "..\\data\\cleaned\\VETUSDT.csv\n",
-      "..\\data\\cleaned\\XRPUSDT.csv\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-201-b4d1df8dd287>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-200-29de11d674d7>\u001b[0m in \u001b[0;36mdata_table\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[1;31m#fet the file path\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m     \u001b[0mfile_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"File path\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex_col\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"date\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m    858\u001b[0m                 \u001b[1;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    859\u001b[0m             )\n\u001b[1;32m--> 860\u001b[1;33m         return self._input_request(str(prompt),\n\u001b[0m\u001b[0;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    862\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m    902\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    903\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 904\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Interrupted by user\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    905\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    906\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Message:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+      "..\\data\\cleaned\\XRPUSDT.csv\n",
+      "File path..\\data\\cleaned\\ADAUSDT.csv\n",
+      "\n",
+      "Select a date (minutes to be considered) between 2020-02-19 17:30:00 and 2021-02-19 12:00:00\n",
+      "\n",
+      "Begin date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'2020-02-19 17:30:00\n",
+      "Final date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'2021-02-18 17:30:00\n",
+      "\n",
+      "Select the funding fee (as a decimal format, ex: 0.01)0.01\n",
+      "\n",
+      "Select the funding hour (integer with two digits, ex : 16)08\n",
+      "\n",
+      "Select the target price increase (as a decimal format, ex: 0.01)0.000001\n",
+      "\n",
+      "Select the liquidation price decrease (as a decimal format, ex: 0.01)0.01\n",
+      "\n",
+      "Select the minutes interval (integer with two digits, ex : 16)10\n",
+      "\n",
+      "Name for the dataframe to savetest\n",
+      "\n",
+      "For the dates between 2020-02-19 17:30:00 and 2021-02-18 17:30:00, considering the funding hour 08 within 10 minutes     period, the target price of: 0.05784005784 , the liquidation price of :0.0572616 the target price was hit on 0.736986301369863     of the total periods\n"
      ]
     }
    ],
