Updated data function

--- a/notebooks/dataframe_styler.ipynb
+++ b/notebooks/dataframe_styler.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,30 +53,33 @@
     "    df = pd.read_csv(file_path, index_col=\"date\")\n",
     "    df.drop(\"Unnamed: 0\",axis=1, inplace=True)\n",
     "    df.index = pd.to_datetime(df.index)\n",
+    "    \n",
+    "    \n",
     "    print()\n",
     "    print(\"Select a date (minutes to be considered) between {} and {}\".format(df.index.min(), df.index.max()))\n",
     "    print()\n",
     "    \n",
     "    \n",
     "    #get the inputs\n",
-    "    init_date = input(\"Begin date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'\")\n",
-    "    final_date = input(\"Final date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'\")\n",
+    "    init_date = input(\"Begin date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00':   \")\n",
+    "    final_date = input(\"Final date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00':   \")\n",
     "    print()\n",
-    "    funding = float(input(\"Select the funding fee (as a decimal format, ex: 0.01)\"))\n",
+    "    hour = input(\"Select the funding hour (integer with two digits, ex : 16):   \")\n",
     "    \n",
     "    print()\n",
-    "    hour = input(\"Select the funding hour (integer with two digits, ex : 16)\")\n",
+    "    funding = float(input(\"Select the funding fee (as a decimal format, ex: 0.01):   \"))\n",
     "    print()\n",
-    "    target_price = float(input(\"Select the target price increase (as a decimal format, ex: 0.01)\"))\n",
+    "    target_price = float(input(\"Select the target price increase (as a decimal format, ex: 0.01):   \"))\n",
     "    print()\n",
-    "    liquidation_price = float(input(\"Select the liquidation price decrease (as a decimal format, ex: 0.01)\"))\n",
+    "    liquidation_price = float(input(\"Select the liquidation price decrease (as a decimal format, ex: 0.01):   \"))\n",
     "    print()\n",
-    "    minutes = input(\"Select the minutes interval (integer with two digits, ex : 16)\")\n",
+    "    minutes = input(\"Select the minutes interval (integer with two digits, ex : 16):   \")\n",
     "    print()\n",
-    "    filename = input(\"Name for the dataframe to save\")\n",
+    "    filename = input(\"Name for the dataframe to save:  \")\n",
     "    \n",
-    "    df_time_period = df[init_date:final_date]\n",
+    "    \n",
     "    df_exact_hour = df_time_period.at_time(hour+\":00\")\n",
+    "    \n",
     "    \n",
     "    \n",
     "    #Initialize the counter and the percentage\n",
@@ -108,19 +111,22 @@
     "        percentage = counter/len(df_sliced)\n",
     "        \n",
     "        #save the dataframe\n",
-    "        df_sliced.to_csv(\"{}.csv\".format(filename))\n",
+    "        df_sliced.to_csv(\"..\\saved_dataframes\\{}.csv\".format(filename))\n",
     "\n",
     "    # If the funding is not higher stops\n",
     "    else:\n",
-    "        print( \"Funding fee is below the select percentage\")\n",
+    "        \n",
+    "        print(\"The percentage selected for the funding fee is :{} , and for the select time period the\"\\\n",
+    "              \"maximum fee is: {}. So funding fee is below the select percentage\".format(fundingnding, df_exact_hour['fundingRate'].values.max()))\n",
+    "    \n",
     "\n",
     "    \n",
     "    print()\n",
     "\n",
     "\n",
-    "    print((\"For the dates between {} and {}, considering the funding hour {} within {} minutes \\\n",
-    "    period, the target price of: {} , the liquidation price of :{} the target price was hit on {} \\\n",
-    "    of the total periods\").format(init_date,final_date,hour,minutes,target_price,liquidation_price, percentage))\n",
+    "    print((\"For the dates between {} and {}, considering the funding hour {} within {} minutes\" \\\n",
+    "    \"period, the target price of: {} , the liquidation price of :{} the target price was hit on {}\" \\\n",
+    "    \"of the total periods\").format(init_date,final_date,hour,minutes,target_price,liquidation_price, percentage))\n",
     "    \n",
     "    \n",
     "    "
@@ -128,9 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 343,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -152,21 +158,21 @@
       "Select a date (minutes to be considered) between 2020-02-19 17:30:00 and 2021-02-19 12:00:00\n",
       "\n",
       "Begin date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'2020-02-19 17:30:00\n",
-      "Final date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'2021-02-18 17:30:00\n",
+      "Final date (format : year-month-day hour:min:sec). Ex: '2020-02-19 17:30:00'2021-02-19 12:00:00\n",
+      "\n",
+      "Select the funding hour (integer with two digits, ex : 16)21\n",
       "\n",
       "Select the funding fee (as a decimal format, ex: 0.01)0.01\n",
       "\n",
-      "Select the funding hour (integer with two digits, ex : 16)08\n",
+      "Select the target price increase (as a decimal format, ex: 0.01)0.01\n",
       "\n",
-      "Select the target price increase (as a decimal format, ex: 0.01)0.000001\n",
-      "\n",
-      "Select the liquidation price decrease (as a decimal format, ex: 0.01)0.01\n",
+      "Select the liquidation price decrease (as a decimal format, ex: 0.01)0.1\n",
       "\n",
       "Select the minutes interval (integer with two digits, ex : 16)10\n",
       "\n",
-      "Name for the dataframe to savetest\n",
+      "Name for the dataframe to save:  test\n",
       "\n",
-      "For the dates between 2020-02-19 17:30:00 and 2021-02-18 17:30:00, considering the funding hour 08 within 10 minutes     period, the target price of: 0.05784005784 , the liquidation price of :0.0572616 the target price was hit on 0.736986301369863     of the total periods\n"
+      "For the dates between 2020-02-19 17:30:00 and 2021-02-19 12:00:00, considering the funding hour 21 within 10 minutesperiod, the target price of: 0.061761500000000004 , the liquidation price of :0.055035 the target price was hit on 0.7287671232876712of the total periods\n"
      ]
     }
    ],
