Updated data function

--- a/notebooks/dataframe_styler.ipynb
+++ b/notebooks/dataframe_styler.ipynb
@@ -56,7 +56,7 @@
     "    \n",
     "    \n",
     "    print()\n",
-    "    print(\"Select a date (minutes to be considered) between {} and {}\".format(df.index.min(), df.index.max()))\n",
+    "    print(\"Select a date  between {} and {}\".format(df.index.min(), df.index.max()))\n",
     "    print()\n",
     "    \n",
     "    \n",
